# rkfs

docker/: .env  Makefile  docker-compose.yml
docker/linux_x86_64/: Dockerfile
docker/linux_x86_64/init/dotfiles/: .bashrc
docker/linux_x86_64/init/scripts/: init.sh
docker/linux_x86_64/init/scripts/install/: default-tools.sh  dev-tools.sh
rkfs/: Cargo.toml  Makefile  linker.ld  rust-toolchain.toml
rkfs/.cargo/: config.toml
rkfs/arch/i386/: i386-unknown-none.json
rkfs/i386/: i386-unknown-none.json
rkfs/src/: lib.rs  main.rs  vga_buffer.rs
rkfs/src/boot/: boot.asm
rkfs/src/debug/: stack.rs
rkfs/src/gdt/: global_descriptor_table.rs  mod.rs  segment_descriptor.rs
rkfs/src/vga/: buffer.rs  color.rs  macros.rs  mod.rs  screen_char.rs  writer.rs
rkfs/targets/: i386-unknown-none.json
