[package]
name = "rkfs"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = true

[dependencies]
volatile = "0.2.6"
spin = "0.10.0"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
